# campusconnect

./: .env  .flutter-plugins-dependencies  00_START_HERE.md  API_ENDPOINTS.md  AUTHENTICATION_GUIDE.md  COMPLETION_REPORT.md  DEPRECATION_FIXES.md  INDEX.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  NAVIGATION_README.md  QUICK_START.md  README.md  README_INTEGRATION.md  VERIFICATION_CHECKLIST.md  api_client.dart  attendance_page.dart  home_page.dart  init_db.py  main.dart  main.py  occupancy_page.dart  occupancy_service.dart  prof_shell.dart  profile_page.dart  pubspec.yaml  pyproject.toml  seating_page.dart  seating_service.dart  timetable_page.dart  timetable_service.dart  welcome_screen.dart
